Fixed the glasses overflowing outside it's product grid but it's still stretched out.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,6 +79,7 @@ nav ul {
 }
 
 .productGrid img {
+  max-width: 8em;
   height: 9rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
